--- a/css/contacts.css
+++ b/css/contacts.css
@@ -7,9 +7,9 @@
 }
 #content li { cursor: default; }
 #contactsHeader input[type=checkbox] {
-	position: absolute;
-	top: 18px;
-	left: 18px;
+	margin-top: 4px;
+	margin-left: 17px;
+	margin-right: 18px;
 }
 #content input[type=radio] { 
 	width: 12px; height: 12px; 
@@ -673,11 +673,14 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	vertical-align: middle;
 	margin-bottom: 2px;
 }
+#contactsHeader .toggle {
+	margin: 0 15px;
+	opacity: 1;
+}
 #contactsHeader select {
 	width: auto;
 	max-width: 120px;
 	height: 22px;
-	margin-left: 50px;
 	font-weight: normal;
 	color: black;
 	border: 0;
@@ -773,12 +776,6 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	margin: 32px 0 4px 32px;
 	position: absolute;
 	z-index: 1;
-}
-#contactlist tbody > tr > td.name > input[type=checkbox] + label, #select_all + label {
-	height: 50px;
-	position: absolute;
-	width: 50px;
-	z-index: 5;
 }
 #contactlist tbody > tr:hover > td.name > input[type=checkbox]:first-child {
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); opacity:1;
