Initial work on contact list pagination.

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -759,6 +759,22 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	transition: all 0.5s ease-in-out;
 }
 
+#contact-load-more {
+    height: 3em;
+    width: 100%;
+    border-radius: 0;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    border-color: #DDD;
+    outline: none;
+    display: none;
+}
+
+#contact-load-more.loading {
+    text-indent: -3000px;
+    overflow: hidden;
+}
+
 @media screen and (min-width: 1400px) {
 	#contact > ul.propertylist {
 		-moz-column-count: 3;
