--- a/css/contacts.css
+++ b/css/contacts.css
@@ -917,6 +917,9 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#contactsHeader tr td.tel { display: none; }
 	#app-navigation { width: 200px; }
 	#app-settings { width: 199px; }
+	.multiselect #contactsHeader {
+		margin-left: 280px; padding-right: 280px;
+	}
 }
 @media screen and (max-width: 900px) {
 	#contactsHeader .delete { display: none; }
