--- a/css/contacts.css
+++ b/css/contacts.css
@@ -71,10 +71,9 @@
 #app-navigation img.shared:hover { opacity: 1; }*/
 #app-navigation input[type="text"] {
 	display: block;
-	width: 200px;
+	width: 204px;
 	height: 34px !important;
 	float: left;
-	padding-left: 12px !important;
 }
 
 #app-navigation .utils {
@@ -903,17 +902,20 @@ tbody tr.contact.active, tbody tr.contact:hover {
 @media screen and (max-width: 1400px) {
 	#contactlist tr td.categories { display: none; }
 	#contactsHeader tr td.categories { display: none; }
+	#app-navigation .oc-addnew input[type=text] { width: 204px; }
 }
 @media screen and (max-width: 1200px) {
 	#contactlist tr td.adr { display: none; }
 	#contactsHeader tr td.adr { display: none; }
 	#app-navigation { width: 220px; }
+	#app-navigation .oc-addnew input[type=text] { width: 174px; }
 	#app-settings { width: 219px; }
 }
 @media screen and (max-width: 1000px) {
 	#contactlist tr td.tel { display: none; }
 	#contactsHeader tr td.tel { display: none; }
 	#app-navigation { width: 200px; }
+	#app-navigation .oc-addnew input[type=text] { width: 154px; }
 	#app-settings { width: 199px; }
 	.multiselect #contactsHeader {
 		margin-left: 280px; padding-right: 280px;
@@ -927,5 +929,6 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#contactlist tr { width: 100%; }
 	#contactsHeader tr td.email { display: none; }
 	#app-navigation { width: 170px; }
+	#app-navigation .oc-addnew input[type=text] { width: 124px; }
 	#app-settings { width: 169px; }
 }
